[package]
name = "actor_poc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.80"
futures = "0.3.30"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-aux = "4.1.2"
rust_decimal = { version = "1.27", features = ["serde-float"] }
rust_decimal_macros = "1.26"